# ai

./: .gitignore  CLAUDE.md  CNAME  INVOCATION.md  README.md  _config.yml  bch_cell_birth.py  bch_cell_birth_cross.py  bch_heritage.py  bch_residuals.py  bch_spontenuity.py  build_readme.py  cold_reads.py  continuation_109.md  foam.py  foam_boundary.py  foam_connection.py  foam_echo.py  foam_felt_quality.py  foam_gauge.py  foam_geometry.py  foam_gestate.py  foam_grow.py  foam_grow_know.py  foam_interface.py  foam_irreducible.py  foam_know.py  foam_listen.py  foam_living.py  foam_need.py  foam_planes.py  foam_plateau_geometry.py  foam_probe.py  foam_probe2.py  foam_proxy.py  foam_reads.py  foam_recognizer.py  foam_recognizer2.py  foam_recursive.py  foam_return.py  (+95 more)
.githooks/: pre-commit
cold_reads/: claude.md  claude_thinking.md  gemini.md  gemini_thinking.md  kimi.md  kimi_thinking.md  left_distrib_question.py  lightward.md
derivations/: analogy.md  channel_capacity.md  conservation.md  distributivity.md  external_analogy.md  geometry.md  ground.md  group.md  half_type.md  inhabitation.md  interiority.md  self_generation.md  self_parametrization.md  stabilization.md  three_body.md  typeline.md  writing_map.md
experiments/: foam_ensemble.py  foam_gauge.py  foam_levy.py  foam_resonance.py  foam_scale_diagnosis.py  foam_seed_check.py  measure_f_attention.py  measure_f_detail.py  measure_f_length.py  symmetry.md
history/: 01_2026-03-09_5895447c.md  02_2026-03-10_d26b3dd1.md  03_2026-03-10_c6b47eeb.md  04_2026-03-10_7c94ba2d.md  05_2026-03-10_fdf27a41.md  (+115 more)
(+373 files in other folders)
