[project]
name = "ai"
version = "0.1.0"
description = "the measurement solution"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.4.3",
    "scipy>=1.17.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["derivations/observed"]
python_files = ["*.py"]
pythonpath = ["."]

[dependency-groups]
dev = []
